[package]
name = "rusty_web"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "mysql"] }
dotenv = "0.15"
tracing = "0.1.41"
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
tracing-subscriber = "0.3.19"
serde_json = "1.0.140"
